--- a/Firefox Plugin/popup.html
+++ b/Firefox Plugin/popup.html
@@ -18,6 +18,7 @@
             <button id="save-btn" class="primary-btn">
                 <span class="icon">🔖</span> Save Current Page
             </button>
+            <input type="text" id="tags-input" placeholder="Tags (comma separated)..." style="width: 100%; box-sizing: border-box; margin-top: 8px; padding: 6px;">
 
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Ask your bookmarks...">
