--- a/Firefox Plugin/sidebar.html
+++ b/Firefox Plugin/sidebar.html
@@ -26,6 +26,7 @@
             <button id="send-btn" disabled>➤</button>
         </div>
     </div>
+    <script src="lib/marked.min.js"></script>
     <script src="api.js"></script>
     <script src="sidebar.js"></script>
 </body>
